--- a/title/skp.tex
+++ b/title/skp.tex
@@ -32,7 +32,7 @@
     \begingroup
     \center
     \begin{flushright}
-    \href{http://popperschule.at}{\includegraphics[width=50mm]{logo.pdf}}
+    \href{http://popperschule.at}{\includegraphics[width=50mm]{core/logo.pdf}}
     \end{flushright}
     \vspace{2cm}
     {Vorwissenschaftliche Arbeit im Rahmen der Reifeprüfung}
