--- a/setup.tex
+++ b/setup.tex
@@ -1,6 +1,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[frenchb, greek, british, latin, ngerman]{babel}
+\usepackage[british, ngerman]{babel}
 \usepackage[babel,german=quotes]{csquotes}
 \usepackage[hidelinks]{hyperref}
 \usepackage{chngcntr}
